--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=2023OneLinkWallet0!
+POSTGRES_PASSWORD=ttffhh2010
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=onelinkwallet
